# notification-utils

./: .dockerignore  .flake8  .git-blame-ignore-revs  .gitignore  .talismanrc  Dockerfile  MANIFEST.in  Makefile  README.md  catalog-info.yaml  docker-compose.yml  mypy.ini  notification-utils.pyproj  pyproject.toml  requirements.txt  requirements_for_test.txt  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: notify-dev-entrypoint.sh
.github/: emass.json  main.workflow  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report-template.md  dependency-update-template.md  story-template.md
.github/actions/icecream/: README.md  action.yml  pyproject.toml
.github/actions/icecream/src/icecream/: ___init__.py  main.py
.github/actions/waffles/: Dockerfile  README.md  action.yml  entrypoint.sh  requirements.txt  waffles.py
.github/workflows/: ci.yaml  codeql-analysis.yml  codeql.yml  generate-sbom.yml  seekret.yaml  test.yaml
.metals/: metals.h2.db
docker/: Dockerfile
docs/: README.md  mistune.md
log/: .gitignore
notifications_utils/: __init__.py  base64_uuid.py  columns.py  contact_request.py  decorators.py  field.py  formatters.py  formatters2.py  international_billing_rates.csv  international_billing_rates.py  international_billing_rates.yml  international_billing_rates_updater.py  iterable.py  letter_timings.py  logging.py  parallel.py  pdf.py  recipients.py  request_helper.py  s3.py  sanitise_text.py  sms_fragment_count_cases.csv  statsd_decorators.py  strftime_codes.py  system_status.py  template.py  template2.py  template_change.py  timezones.py  url_safe_token.py  validate_html.py  version.py
notifications_utils/clients/redis/: __init__.py  annual_limit.py  bounce_rate.py  cache_keys.py  redis_client.py
notifications_utils/clients/statsd/: statsd_client.py
notifications_utils/clients/zendesk/: zendesk_client.py  zendesk_sell_client.py
notifications_utils/jinja_templates/: email_preview_template.jinja2  email_template.jinja2  sms_preview_template.jinja2
notifications_utils/jinja_templates/email/: _custom_logo_no_background_colour.jinja2  _custom_logo_with_background_colour.jinja2  _fip_banner.jinja2  _footer.jinja2  email_preview_template.jinja2  email_template.jinja2
notifications_utils/js/: iframeResizer.js
scripts/: bootstrap.sh  push-tag.sh  run_tests.sh  validate_phone_numbers.py  waffles.py
scripts/sms_pricing/: README.md  allowed_country_list.csv  aws_prices_sms_mar_2026.csv  country_list.txt  country_prefixes.csv  dlr_snapshot.yml  international_billing_rates_updater.py
tests/: conftest.py  test_annual_limit.py  test_antivirus_client.py  test_base64_uuid.py  test_base_template.py  test_bounce_rate.py  test_cache_keys.py  test_columns.py  test_contact_request.py  test_cta_links.py  test_decorators.py  test_field.py  test_field_html_handling.py  test_formatters.py  test_international_billing_rates.py  test_international_billing_rates_updater.py  test_letter_timings.py  test_logging.py  test_pdf.py  test_placeholders.py  test_recipient_csv.py  test_recipient_validation.py  test_redis_client.py  test_s3.py  test_sanitise_text.py  test_statsd_client.py  test_statsd_decorators.py  test_strftime_codes.py  test_system_status.py  test_template.py  test_template2.py  test_template_change.py  test_template_current.py  test_template_types.py  test_timezones.py  test_url_safe_tokens.py  test_validate_html.py  test_zendesk_client.py  test_zendesk_sell_client.py
tests/test_files/: index.md
tests/test_files/html/: action_links.html  block_quotes.html  block_quotes_action_link.html  emphasis.html  headers.html  images.html  links.html  lists.html  tables.html  thematic_break.html
tests/test_files/html/placeholders/: action_links_placeholders_simple.html  action_links_placeholders_spaces.html  action_links_placeholders_tabs.html  block_quotes_placeholders_lists.html  block_quotes_placeholders_simple.html  links_placeholders_simple.html  links_placeholders_spaces.html  links_placeholders_tabs.html
tests/test_files/html_current/: action_links.html  block_quotes.html  block_quotes_action_link.html  emphasis.html  headers.html  images.html  links.html  lists.html  tables.html  thematic_break.html
tests/test_files/html_current/placeholders/: action_links_placeholders_simple.html  action_links_placeholders_spaces.html  action_links_placeholders_tabs.html  block_quotes_placeholders_lists.html  block_quotes_placeholders_simple.html  links_placeholders_simple.html  links_placeholders_spaces.html  links_placeholders_tabs.html
tests/test_files/markdown/: action_links.md  block_quotes.md  block_quotes_action_link.md  emphasis.md  headers.md  images.md  links.md  lists.md  tables.md  thematic_break.md
tests/test_files/markdown/placeholders/: action_links_placeholders.md  block_quotes_placeholders.md  links_placeholders.md
tests/test_files/plain_text/: action_links.txt  block_quotes.txt  block_quotes_action_link.txt  emphasis.txt  headers.txt  images.txt  links.txt  lists.txt  tables.txt  thematic_break.txt
tests/test_files/plain_text/placeholders/: action_links_placeholders_simple.txt  action_links_placeholders_spaces.txt  action_links_placeholders_tabs.txt  block_quotes_placeholders_lists.txt  block_quotes_placeholders_simple.txt  links_placeholders_simple.txt  links_placeholders_spaces.txt  links_placeholders_tabs.txt
