[tool.black]
line-length = 130
target-version = ['py37', 'py38', 'py39', 'py310']
include = '(notifications_utils|tests)/.*\.pyi?$'

[tool.poetry]
name = "notifications-utils"
version = "50.1.9"
description = "Shared python code for Notification - Provides logging utils etc."
authors = ["Canadian Digital Service"]
license = "MIT license"
readme = "README.md"
packages = []

[build-system]
requires = ["poetry>=1.3.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.10"
bleach = "3.3.1"
cachetools = "4.2.4"
mistune = "0.8.4"
requests = "2.28.2"
python-json-logger = "2.0.7"
Flask = "2.2.3"
ordered-set = "4.1.0"
markupsafe = "2.1.2"
Jinja2 = "^3.0.0"
statsd = "3.3.0"
Flask-Redis = "0.4.0"
PyYAML = "5.4.1"
phonenumbers = "8.13.7"
pytz = "2021.3"
smartypants = "2.0.1"
pypdf2 = "1.28.6"
py_w3c = "0.3.1"
# required by both api and admin
awscli = "1.27.86"
boto3 = "1.26.86"
werkzeug = "2.2.3"
itsdangerous = "2.1.2"

[tool.poetry.group.test.dependencies]
pytest = "7.2.2"
pytest-mock = "3.10.0"
pytest-cov = "2.12.1"
pytest-xdist = "2.5.0"
freezegun = "1.2.2"
requests-mock = "1.10.0"
flake8 = "3.9.2"
flake8-print = "4.0.1"
mypy = "0.991"
black = "22.12.0"
click = "8.1.3"
types-python-dateutil = "2.8.19.10"
types-PyYAML = "6.0.12.8"
types-pytz = "2022.7.1.2"
types-bleach = "5.0.3.1"
types-cachetools = "5.3.0.4"
types-redis = "4.5.1.4"
types-requests = "2.28.11.15"
