[tool.black]
line-length = 130
target-version = ['py37', 'py38', 'py39', 'py310']
include = '(notifications_utils|tests)/.*\.pyi?$'

[tool.poetry]
name = "notifications-utils"
version = "52.0.13"
description = "Shared python code for Notification - Provides logging utils etc."
authors = ["Canadian Digital Service"]
license = "MIT license"
readme = "README.md"
packages = []

[build-system]
requires = ["poetry>=1.3.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.10"
bleach = "6.0.0"
cachetools = "4.2.4"
mistune = "0.8.4"
requests = "2.31.0"
python-json-logger = "2.0.7"
Flask = "2.3.3"
ordered-set = "4.1.0"
markupsafe = "2.1.3"
Jinja2 = "^3.0.0"
statsd = "3.3.0"
Flask-Redis = "0.4.0"
PyYAML = "6.0.1"
phonenumbers = "8.13.24"
pytz = "2021.3"
smartypants = "2.0.1"
pypdf2 = "1.28.6"
py_w3c = "0.3.1"
# required by both api and admin
awscli = "1.29.84"
boto3 = "1.28.84"
werkzeug = "2.3.7"
itsdangerous = "2.1.2"

# Pinned dependencies
certifi = "^2023.7.22" # pinned for security reasons: https://github.com/cds-snc/notification-utils/security/dependabot/22
cryptography = "^41.0.2" # pinned for security reasons: https://github.com/cds-snc/notification-utils/security/dependabot/21

[tool.poetry.group.test.dependencies]
pytest = "7.4.3"
pytest-mock = "3.11.1"
pytest-cov = "2.12.1"
pytest-xdist = "2.5.0"
freezegun = "1.2.2"
requests-mock = "1.11.0"
fakeredis = "^2.10.3"
flake8 = "3.9.2"
flake8-print = "4.0.1"
mypy = "1.4.1"
black = "23.7.0"
click = "8.1.7"
types-python-dateutil = "2.8.19.14"
types-PyYAML = "6.0.12.12"
types-pytz = "2022.7.1.2"
types-bleach = "5.0.3.1"
types-cachetools = "5.3.0.7"
types-redis = "4.6.0.10"
types-requests = "2.31.0.10"
