[tool.poetry]
name = "notifications-utils"
version = "52.2.9"
description = "Shared python code for Notification - Provides logging utils etc."
authors = ["Canadian Digital Service"]
license = "MIT license"
readme = "README.md"
packages = []

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.10.9"
# required by both api and admin
awscli = "1.33.35"
bleach = "6.1.0"
boto3 = "1.34.153"
cachetools = "4.2.4"

# Pinned dependencies
certifi = "^2023.7.22"       # pinned for security reasons: https://github.com/cds-snc/notification-utils/security/dependabot/22
cryptography = "^42.0.3"     # https://github.com/cds-snc/notification-utils/security/dependabot/31
Flask = "2.3.3"
Flask-Redis = "0.4.0"
itsdangerous = "2.2.0"
Jinja2 = "^3.0.0"
markupsafe = "2.1.5"
mistune = "0.8.4"
ordered-set = "4.1.0"
phonenumbers = "8.13.42"
pre-commit = "^3.7.1"
py_w3c = "0.3.1"
pypdf2 = "1.28.6"
python-json-logger = "2.0.7"
pytz = "2021.3"
PyYAML = "6.0.1"
requests = "2.31.0"
smartypants = "2.0.1"
statsd = "3.3.0"
werkzeug = "3.0.3"

[tool.poetry.group.test.dependencies]
beautifulsoup4 = "^4.12.3"
click = "8.1.7"
fakeredis = "^2.10.3"
freezegun = "1.5.1"
mypy = "1.10.0"
pytest = "7.4.4"
pytest-cov = "2.12.1"
pytest-mock = "3.14.0"
pytest-xdist = "2.5.0"
requests-mock = "1.12.1"
ruff = "^0.2.1"
types-beautifulsoup4 = "^4.12.0.20240229"
types-bleach = "5.0.3.1"
types-cachetools = "5.3.0.7"
types-python-dateutil = "2.9.0.20240316"
types-pytz = "2022.7.1.2"
types-PyYAML = "6.0.12.20240724"
types-redis = "4.6.0.20240726"
types-requests = "2.32.0.20240712"

[tool.ruff]
target-version = "py310"
exclude = [
    "venv*",
    "__pycache__",
    "node_modules",
    "cache",
    "migrations",
    "build",
]
extend-include = ['(app|migrations|tests)/.*\.pyi?$']
src = ["app", "migrations", "tests"]
# Ruff formatter will wrap lines at a length of 130 characters.
line-length = 130
indent-width = 4

[tool.ruff.lint]
select = [
    # PyFlakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
    "I002",
]
ignore = ["E203", "E501", "E402"]

# Provide line length leeway for docstrings
[tool.ruff.lint.pycodestyle]
max-doc-length = 170
# Enforce doc string format? (google, numpy or pep257)
# convention = "google"

[tool.ruff.format]
# Match black formatting
# Double quotes for strings.
quote-style = "double"
# Indent with spaces, rather than tabs.
indent-style = "space"
# Respect magic trailing commas.
skip-magic-trailing-comma = false
# Automatically detect the appropriate line ending.
line-ending = "auto"
